2000-09-25  Joseph S. Myers  <jsm28@cam.ac.uk>

	* atc/atc.6.in, hack/Makefile.bsd: Update from NetBSD CVS.
	* battlestar/battlestar.c, battlestar/com1.c, battlestar/com2.c,
	battlestar/com3.c, battlestar/com4.c, battlestar/com5.c,
	battlestar/com6.c, battlestar/com7.c, battlestar/cypher.c,
	battlestar/dayfile.c, battlestar/extern.h, battlestar/fly.c,
	battlestar/getcom.c, battlestar/globals.c, battlestar/nightfile.c,
	battlestar/parse.c, battlestar/room.c, battlestar/words.c: Update
	from NetBSD CVS after merge.

	* battlestar/com3.c (jump): Use defined constant FINAL instead of
	hardcoded number 275.  From OpenBSD.

	* battlestar/com2.c (murder): Fix logic of use of n and wordnumber
	when using laser.  From OpenBSD.
	* tests/battlestar.in39, tests/battlestar.out39: New test.
	* tests/battlestar.test: Update.

2000-09-24  Joseph S. Myers  <jsm28@cam.ac.uk>

	* NEWS, TODO: Update.

	* COPYING, INSTALL, NEWS, PACKAGING, README, SECURITY: Don't use
	ASCII backquotes and neutral apostrophes as matched quotes.

	* battlestar/getcom.c (getcom): If a line of standard input goes
	beyond our buffer, discard extra characters rather than reading
	them as our next command.  From OpenBSD.

	* battlestar/cypher.c (cypher): Improve messages when WEIGHT or
	CUMBER are zero.

	* battlestar/com2.c (ravage), battlestar/com3.c (bury),
	battlestar/com5.c (kiss, love, give), battlestar/com6.c (ride):
	Add explicit no-ops to empty loops following the NetBSD style
	guide.

	* battlestar/extern.h, battlestar/parse.c, battlestar/globals.c:
	Make hash table static in parse.c.

	* battlestar/cypher.c (cypher): For INVEN, give more sensible
	messages when WEIGHT or CUMBER are zero.

2000-09-23  Joseph S. Myers  <jsm28@cam.ac.uk>

	* battlestar/globals.c (objdes, objsht): Use NULL instead of 0;
	from OpenBSD.  Also add or adjust comments.

	* battlestar/com2.c (murder), battlestar/com3.c (shoot),
	battlestar/com4.c (take): Correct "dont" to "don't".  From
	OpenBSD.