@@ -1,0 +1,4 @@
+r
+r
+love amulet
+quit
